# whisper-tauri

./: .editorconfig  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.claude/: CLAUDE.md
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
docs/features/: README.md  animations.md  build.md  dashboard.md  dev-menu.md  error-handling.md  export.md  file-conversion.md  history-search.md  history.md  i18n.md  keyboard-shortcuts.md  recording.md  settings.md  slm-text-processing.md  text-processing.md  toast.md
docs/mvp/: step-01.md  step-02.md  step-03.md  step-04.md  step-05.md  step-06.md  step-07.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/test/: sample.test.ts  setup.ts
